<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerActivityName"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="Login"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/passwordConfirm"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/passwordConfirm"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/registrationButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/backToLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/backToLogin"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/blue1"
        android:textSize="18sp"/>

</LinearLayout>